--- a/ListadeCompras/gradle/wrapper/gradle-wrapper.properties
+++ b/ListadeCompras/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Jun 08 18:15:56 GMT-03:00 2020
+#Sat Aug 29 07:05:23 BRT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
